--- a/notebook/2018-12-18-verifyBamID/2018-12-18-verifyBamID.Rmd
+++ b/notebook/2018-12-18-verifyBamID/2018-12-18-verifyBamID.Rmd
@@ -171,3 +171,10 @@ bcftools isec -p checkVCF/1vs3 CMC-preimputed-{1,3}.vcf.gz
 bcftools view -H checkVCF/1vs3/0000.vcf
 bcftools view -H checkVCF/1vs3/0001.vcf
 ```
+
+## Correction
+
+```{r engine="bash", eval=FALSE}
+# to be run on Ada
+synapse get syn16816490 # CMC_Human_SNP_mergedMetadata.csv
+```
