Title corrected for bsmn-pipeline

--- a/notebook/2019-01-22-bsmn-pipeline-test/2019-01-22-bsmn-pipeline-test.Rmd
+++ b/notebook/2019-01-22-bsmn-pipeline-test/2019-01-22-bsmn-pipeline-test.Rmd
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Swapped sample labels and contamination
+#title: 
 tags: [ pipeline, workflow, test, AWS]
 #featimg: "sequence-only-2.png"
 ---
