Chaggai's truth table; before merging with ada

--- a/notebook/2018-09-28-vcf-add-abs-pos/2018-09-28-vcf-add-abs-pos.ipynb
+++ b/notebook/2018-09-28-vcf-add-abs-pos/2018-09-28-vcf-add-abs-pos.ipynb
@@ -2,28 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'x' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-8f0a1f42cba4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;36m3\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "3 * x"
+    "import vcfpy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 668,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
