verifyBamID bestSM aggregator; wip slides

--- a/presentations/2019-01-18-bsm-wip/2019-01-18-bsm-wip.tex
+++ b/presentations/2019-01-18-bsm-wip/2019-01-18-bsm-wip.tex
@@ -82,6 +82,31 @@ Brain Somatic Mosaicism Network (BSMN)
 \includegraphics[width=1.0\textwidth]{figures/from-others/bsm-science-fig2.jpg}
 \end{frame}
 
+\begin{frame}{Discordance between approaches}
+
+\end{frame}
+
+\begin{frame}{Discordance between variant callers on the same dataset}
+
+\begin{columns}[t]
+\begin{column}{0.5\textwidth}
+
+\includegraphics[width=1.0\columnwidth]{figures/2018-04-08-call-set-concordance/venn-common-sample-wgs-snvs-1.pdf}
+\end{column}
+
+\begin{column}{0.5\textwidth}
+
+\includegraphics[width=1.0\columnwidth]{figures/2018-11-06-number-of-calls/snvs-cs-1.pdf}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\begin{itemize}
+\item find best calling approach (given data set)
+\end{itemize}
+\end{frame}
+
 \end{document}
 
 
